--- a/src/receita01/page02.html
+++ b/src/receita01/page02.html
@@ -2,7 +2,7 @@
 <html lang="pt-BR">
   <head>
     <meta charset="UTF-8" />
-    <title>Receita 01</title>
+    <title>Receita 01 - Página 02</title>
     <script src="https://cdn.tailwindcss.com"></script>
   </head>
   <body class="bg-gray-100 p-8">
@@ -21,14 +21,6 @@
           O passado já me foge<br />
           E o futuro nada diz!<br />
         </p>
-        <a
-          href="page02.html"
-          target="_blank"
-          rel="noopener noreferrer"
-          class="inline-block px-4 py-2 text-white bg-blue-600 rounded-lg hover:bg-blue-700 transition"
-        >
-          Clique aqui
-        </a>
       </div>
 
       <!-- Card 2 -->
@@ -40,14 +32,6 @@
           O passado já me foge<br />
           E o futuro nada diz!<br />
         </p>
-        <a
-          href="page02.html"
-          target="_blank"
-          rel="noopener noreferrer"
-          class="inline-block px-4 py-2 text-white bg-blue-600 rounded-lg hover:bg-blue-700 transition"
-        >
-          Clique aqui
-        </a>
       </div>
 
       <!-- Card 3 -->
@@ -59,14 +43,6 @@
           O passado já me foge<br />
           E o futuro nada diz!<br />
         </p>
-        <a
-          href="page02.html"
-          target="_blank"
-          rel="noopener noreferrer"
-          class="inline-block px-4 py-2 text-white bg-blue-600 rounded-lg hover:bg-blue-700 transition"
-        >
-          Clique aqui
-        </a>
       </div>
     </div>
 
